Replace deprecated projectresolver
Currently Tycho uses a deprecated class from maven to resolve
dependencies of the pom. THis replaces the access by a more modern
recommended approach using the Aether API.